# fb-group-member-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: demo_members.html  group_urls.txt  large_demo_members.html
src/fb_group_member_scraper/: __init__.py  cli.py  date_parser.py  facebook_scraper.py  models.py  reporting.py  static_scraper.py  writer.py
tests/: test_date_parser.py  test_reporting_and_writer.py  test_static_scraper.py
